APEX-368: Fixed the width and spacing issues

--- a/docroot/themes/custom/atg/advanced-selector/css/responsive.css
+++ b/docroot/themes/custom/atg/advanced-selector/css/responsive.css
@@ -9,7 +9,7 @@
 
 @media only screen and (max-width: 1024px) {
   .contain {
-    width: 100%;
+    width: 100% !important;
     min-width: 100%;
   }
   .sel-hd {
