--- a/docroot/themes/custom/cleco/src/scss/base/_base.scss
+++ b/docroot/themes/custom/cleco/src/scss/base/_base.scss
@@ -50,13 +50,14 @@ html.is-captive {
   background: #fff;
 }
 
-
 .is-centered {
     margin-left: auto;
     margin-right: auto;
 }
 
 .contain {
+  width: 1220px !important;
+  min-width: unset;
   max-width: 1220px !important;
   margin-left: auto;
   margin-right: auto;
