--- a/docroot/themes/custom/cleco/src/scss/components/_sections.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_sections.scss
@@ -116,7 +116,7 @@
 .section-header {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 2rem;
+  margin-bottom: 2rem !important;
 
   &--centered {
     justify-content: center;
